# my_gtest_demo

./: readme
demo/: CMakeLists.txt  example.cpp
